# PulseGuard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  Dockerfile.worker  Dockerfile.worker-updater  NOTICE  PRODUCT.md  PulseGuard_PRD.md  README.en.md  README.md  docker-compose.relay-worker.yml  docker-compose.relay.yml  docker-compose.worker.build.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-worker.yml
.qoder/specs/: style-optimization-plan.md
backend/: requirements.txt
backend/app/: api_assertions.py  artifacts.py  browser_installation.py  browser_types.py  cli.py  config.py  config_transfer.py  context.py  defaults.py  failure_summary.py  main.py  network_checks.py  notifier.py  relay_cert.py  relay_client.py  relay_server.py  relay_tunnel.py  resource_pool.py  runner.py  scheduler.py  schemas.py  storage.py  ui_assertions.py  viewport.py  worker.py  worker_updater.py
backend/tests/: test_api_assertions.py  test_browser_installation.py  test_config.py  test_config_transfer.py  test_context.py  test_main.py  test_monitoring.py  test_network_checks.py  test_notifier.py  test_relay_cert.py  (+11 more)
docs/: PulseGuard_UI_API_Probe_PRD.md  china-deployment.md  design-system.md  extension_batch_scan_element_rules.md  future-roadmap.md  operations-reference.en.md  operations-reference.md  ui-structured-checks.md  volcano-deployment.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
scripts/: deploy-china-systemd.ps1  deploy.ps1  sync-volcano-main.ps1
(+67 files in other folders)
